--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off", // Allows `any` type
+    "@typescript-eslint/no-unused-vars": "warn", // Warns instead of error
+    "react/no-unescaped-entities": "off"         // Disables escaping requirement
+  }
 }
