--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cookie": "^1.0.2",
     "date-fns": "^3.6.0",
     "input-otp": "^1.4.1",
+    "js-beautify": "^1.15.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
