--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cmdk": "^1.0.0",
     "cookie": "^1.0.2",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.0.1",
     "input-otp": "^1.4.1",
     "js-beautify": "^1.15.1",
     "js-cookie": "^3.0.5",
