--- a/package.json
+++ b/package.json
@@ -27,22 +27,24 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-table": "^8.20.5",
+    "@types/dompurify": "^3.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "cookie": "^1.0.2",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.3.1",
     "framer-motion": "^12.0.1",
     "input-otp": "^1.4.1",
     "js-beautify": "^1.15.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.468.0",
-    "next": "15.0.4",
+    "next": "^15.5.7",
     "next-themes": "^0.4.4",
     "nuqs": "^1.20.0",
-    "react": "^19.0.0",
+    "react": "^19.0.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.0.1",
     "recharts": "^2.15.0",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.7.1",
@@ -56,7 +58,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^8",
-    "eslint-config-next": "15.0.4",
+    "eslint-config-next": "^15.5.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
